# intransitive_dice_generator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _config.yml  index.md
_layouts/: forward.html
doc/: construction_of_N_intransitive_M_sided_dice.md  intransitivity_fixed_M_arbitrary_cycle.md
doc/_layouts/: default.html
docs/: construction_of_N_intransitive_M_sided_dice.md  index.md  insert_three_level.py  intransitivity_fixed_M_arbitrary_cycle.md  intransitivity_munnoz_perera_partitioning.md
scripts/: make_linux.bash  make_win64_vs2022.cmd  run_intransitive_dice_generator.bash  run_intransitive_dice_generator.cmd
src/: dice.cpp  dice.h  dice_generator.cpp  dice_generator.h  dice_logger.h  dice_matrix.h  dice_path.h  dice_unittest.cpp  dice_unittest.h  dice_util.cpp  dice_util.h  intransitive_dice_generator.cpp
